<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:textSize="50sp"
        android:id="@+id/inputView"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:id="@+id/answerView"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/c"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:id="@+id/allDeleteButton"
        android:onClick="onAllDeleteClick"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentEnd="true" />

    <Button
        android:visibility="visible"
        android:id="@+id/deleteButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/delete"
        android:onClick="onDeleteClick"
        tools:ignore="RtlHardcoded" />

        <Button
            android:onClick="onZeroClick"
            android:layout_alignParentBottom="true"
            android:text="@string/_0"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_alignParentStart="true" />
        <Button
            android:onClick="onPointClick"
            android:layout_alignParentBottom="true"
            android:text="@string/point"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="85dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="85dp" />
        <Button
            android:onClick="onEqualsClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="170dp"
            android:layout_alignParentBottom="true"
            android:text="@string/equals"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="170dp" />
        <Button
            android:onClick="onPlusClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="255dp"
            android:layout_alignParentBottom="true"
            android:text="@string/plus"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="255dp" />



    <Button
        android:onClick="onOneClick"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:text="@string/_1"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp" />
    <Button
        android:onClick="onTwoClick"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="85dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:text="@string/_2"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="85dp" />
    <Button
        android:onClick="onThreeClick"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="170dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:text="@string/_3"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="170dp" />
    <Button
        android:onClick="onMultipleClick"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="255dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:text="@string/multiple"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_marginStart="255dp"
        android:layout_alignParentStart="true" />

        <Button
            android:onClick="onFourClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="240dp"
            android:text="@string/_4"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp" />
        <Button
            android:onClick="onFiveClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="85dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="240dp"
            android:text="@string/_5"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="85dp" />
        <Button
            android:onClick="onSixClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="170dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="240dp"
            android:text="@string/_6"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="170dp" />
        <Button
            android:onClick="onMinusClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="255dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="240dp"
            android:text="@string/minus"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="255dp" />
        <Button
            android:onClick="onSevenClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="360dp"
            android:layout_alignParentBottom="true"
            android:text="@string/_7"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp" />
        <Button
            android:onClick="onEightClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="85dp"
            android:layout_marginBottom="360dp"
            android:layout_alignParentBottom="true"
            android:text="@string/_8"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="85dp" />
        <Button
            android:onClick="onNineClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="170dp"
            android:layout_marginBottom="360dp"
            android:layout_alignParentBottom="true"
            android:text="@string/_9"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="170dp" />
        <Button
            android:onClick="onDivideClick"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="255dp"
            android:layout_marginBottom="360dp"
            android:layout_alignParentBottom="true"
            android:text="@string/divide"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="255dp" />


</RelativeLayout>